--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -22,4 +22,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attributes.MaxStamina",DevComment="")
 +GameplayTagList=(Tag="Attributes.Stamina",DevComment="")
 +GameplayTagList=(Tag="Attributes.Strenght",DevComment="")
++GameplayTagList=(Tag="Class.Mage",DevComment="")
++GameplayTagList=(Tag="Class.Rogue",DevComment="")
++GameplayTagList=(Tag="Class.Warrior",DevComment="")
 
