Creation of weapons and finishing inventory and data loader

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -14,8 +14,10 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Actions.Equipment.Feet",DevComment="")
 +GameplayTagList=(Tag="Actions.Equipment.Hands",DevComment="")
 +GameplayTagList=(Tag="Actions.Equipment.Head",DevComment="")
++GameplayTagList=(Tag="Actions.Equipment.LeftHand",DevComment="")
 +GameplayTagList=(Tag="Actions.Equipment.Legs",DevComment="")
 +GameplayTagList=(Tag="Actions.Equipment.PrimaryAccesory",DevComment="")
++GameplayTagList=(Tag="Actions.Equipment.RightHand",DevComment="")
 +GameplayTagList=(Tag="Actions.Equipment.SecondaryAccesory",DevComment="")
 +GameplayTagList=(Tag="Actions.Passive.Dex",DevComment="")
 +GameplayTagList=(Tag="Actions.Passive.Intelligence",DevComment="")
